# jeffreysprompts.com

./: .gitignore  AGENTS.md  Cargo.toml  EXISTING_JFP_STRUCTURE.md  FEATURE_PARITY.md  PLAN_TO_MAKE_JEFFREYSPROMPTS_WEBAPP_AND_CLI_TOOL.md  PLAN_TO_PORT_JFP_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  RECOVERY_RUNBOOK.md  SYNC_STRATEGY.md  TEST_AUDIT.md  UPGRADE_LOG.md  cli_ubs.json  fix-fetch-cli.ts  fix-fetch.ts  idea-wizard-SKILL.md  jfp.test.ts  jfp.ts  package.json  tsconfig.json
.beads/: issues.jsonl
.claude/skills/prompt-formatter/: SKILL.md
.claude/skills/skill-maker/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  e2e.yml  release.yml  sync-vercel-aliases.yml
apps/web/: .size-limit.json  next-sitemap.config.js  next.config.ts  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  ubs-report.txt  vitest.config.ts  vitest.setup.ts  web_ubs.json
apps/web/messages/: ja.json
apps/web/public/: manifest.json  robots.txt  sitemap.xml  sw.js
apps/web/src/: instrumentation.ts  middleware.ts  types.d.ts
apps/web/src/app/: error.tsx  globals.css  (+5 more)
crates/jfp/: Cargo.toml  FEATURE_PARITY.md  PLAN_TO_PORT_JFP_TO_RUST.md  RECOVERY_RUNBOOK.md  SYNC_STRATEGY.md
crates/jfp/src/: main.rs
crates/jfp/src/cli/: mod.rs  output.rs
crates/jfp/src/commands/: about.rs  bundles.rs  categories.rs  completion.rs  config.rs  copy.rs  doctor.rs  export.rs  interactive.rs  list.rs  mod.rs  open.rs  random.rs  refresh.rs  render.rs  search.rs  show.rs  status.rs  suggest.rs  tags.rs  update_cli.rs
crates/jfp/src/config/: mod.rs
crates/jfp/src/registry/: embedded.rs  loader.rs  mod.rs
crates/jfp/src/storage/: database.rs  jsonl.rs  mod.rs  schema.rs
crates/jfp/src/types/: bundle.rs  config.rs  credentials.rs  mod.rs  prompt.rs  registry.rs  search.rs
docs/: cli-premium-integration.md
e2e/: cli-auth.test.ts  cli-workflow.test.ts  playwright.config.ts
e2e/admin/: content-moderation.spec.ts
e2e/comments/: moderation.spec.ts  notifications.spec.ts  posting.spec.ts  threading.spec.ts
e2e/lib/: comments-helpers.ts  consent-helpers.ts  global-setup.ts  index.ts  moderation-helpers.ts  ratings-helpers.ts  social-helpers.ts  theme-helpers.ts
e2e/ratings/: display.spec.ts  rate.spec.ts  reviews.spec.ts
e2e/referral/: code.spec.ts
e2e/roadmap/: roadmap.spec.ts
e2e/social/: activity-feed.spec.ts  following.spec.ts
e2e/swapmeet/: prompt-detail.spec.ts
e2e/web/: basket-export.spec.ts  basket.spec.ts  bundles.spec.ts  filters-advanced.spec.ts  filters.spec.ts  homepage.spec.ts  install-flow.spec.ts  language-switch.spec.ts  mobile-interactions.spec.ts  production-smoke.spec.ts  prompt-detail.spec.ts  spotlight.spec.ts  theme.spec.ts
e2e/web/accessibility/: axe-audit.spec.ts  keyboard.spec.ts  screen-reader.spec.ts
e2e/web/moderation/: review.spec.ts  spam-detection.spec.ts
e2e/web/network/: failures.spec.ts  offline.spec.ts  reconnection.spec.ts  slow.spec.ts
e2e/web/privacy/: consent-banner.spec.ts  consent-settings.spec.ts
e2e/web/seo/: og-images.spec.ts  og-metadata.spec.ts
e2e/web/status/: admin.spec.ts
e2e/web/support/: contact-form.spec.ts  tickets.spec.ts
e2e/web/theme/: dark-mode.spec.ts  toggle.spec.ts
e2e/web/visual/: components.spec.ts  mobile.spec.ts  pages.spec.ts
playwright-report/: index.html
scripts/: build-transcript.ts  extract-transcript.ts  merge-coverage.ts  process-transcript.ts  redact-transcript.ts  run-e2e.sh  validate-prompts.ts  validate-publication.ts
test-results/: .last-run.json
(+425 files in other folders)
