# Rust Workspace for jfp CLI
# Part of the jeffreysprompts.com monorepo

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jeffrey Emanuel"]
repository = "https://github.com/Dicklesworthstone/jeffreysprompts.com"

[workspace.dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
# Enable `blocking` so the Rust CLI can fetch the registry without requiring an async runtime yet.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal output
crossterm = "0.28"
ratatui = "0.29"

# Error handling
anyhow = "1"
thiserror = "2"

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "functions"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
directories = "6"
dirs = "6"
toml = "0.8"

# Random
rand = "0.9"

# Terminal detection
atty = "0.2"

# Testing
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
