[package]
name = "jfp"
description = "Agent-optimized CLI for JeffreysPrompts.com"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "jfp"
path = "src/main.rs"

[dependencies]
# CLI framework
clap.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Terminal output
crossterm.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# SQLite
rusqlite.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
directories.workspace = true
dirs.workspace = true
toml.workspace = true

# Random
rand.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
